# stats-methods-lessons

./: .gitignore  .gitlab-ci.yml  Containerfile  app.py  lesson2_rhs.py  main.py  page_registry.py  pyproject.toml
.gitea/workflows/: workflow.yaml
.github/workflows/: build-container.yml
native/: lesson2_native.c
pages/: gp_from_scratch.py  index.py  lesson_1.py  lesson_2.py  lesson_3.py  linear_regression_from_scratch.py
tests/: test_lesson2_rhs.py  test_page_registry.py
