[project]
name = "stats-methods-lessons"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "marimo>=0.9.31",
    "matplotlib>=3.9.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "salib>=1.5.1",
    "scipy==1.15.1",
    "seaborn>=0.13.2",
]
